第四课完成2/3

--- a/src/01basics/课程与环境准备.md
+++ b/src/01basics/课程与环境准备.md
@@ -1,7 +1,7 @@
 # 课程与环境准备
 ---
 推荐使用ubuntu22.04+ROS2 humble
-在正式开始课程学习前，建议安装好各类驱动和软件（QQ、梯子、输入法、vscode、chrome等等）
+在正式开始课程学习前，建议安装好各类驱动和软件（QQ、梯子、输入法、vscode、chrome等等）  ~~同时记住这八个字母 RTFM STFW~~  
 推荐直接使用鱼香ROS进行ROS安装和换源，可以省去不少麻烦。
 ```
 wget http://fishros.com/install -O fishros && . fishros
